Talk details for 13th Feb

--- a/index.html
+++ b/index.html
@@ -86,6 +86,46 @@
 
                 <div class="details-box">
                     <div class="cal">
+                        <div class="month">February</div>
+                        <div class="date">13</div>
+                        <div class="time">3pm - 4pm</div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            <h3>Derived autoequivalences on algebraic flops
+                            </h3>
+                        </div>
+
+                        <div class="speaker">
+                            Caroline Namaya, Makerere University and University of Glasgow
+                        </div>
+
+                        <div class="abstract">
+                            In this talk, i will give a construction of derived
+                            autoequivalences associated to  an algebraic flopping contraction
+                            \(X\to X_{\con}\) where \(X\) is quasi-projective with only mild
+                            singularities. These functors are  constructed naturally  using
+                            bimodule cones, and  are locally two-sided tilting complexes by using
+                            the local-global properties.
+                        </div>  
+
+                        <!--
+                        <div class="notes">
+                            <a href="notes/dogs-30_01_24.pdf">Notes</a>
+                        </div>-->
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+
+        <div id="img-separator-2"></div>
+
+        <div id="schedule">
+            <div class="content">
+                <h2>Past Talks</h2>
+                <div class="details-box">
+                    <div class="cal">
                         <div class="month">January</div>
                         <div class="date">30</div>
                         <div class="time">3pm - 4pm</div>
@@ -111,22 +151,8 @@
                                 <li>Coherent group actions, and more</li>
                             </ol>
                         </div>  
-
-                        <!--
-                        <div class="notes">
-                            <a href="notes/dogs-30_01_24.pdf">Notes</a>
-                        </div>-->
                     </div>
                 </div>
-                
-            </div>
-        </div>
-
-        <div id="img-separator-2"></div>
-
-        <div id="schedule">
-            <div class="content">
-                <h2>Past Talks</h2>
 
 
                 <div class="details-box">
