Fixed incorrect latex

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <div class="abstract">
                             In this talk, i will give a construction of derived
                             autoequivalences associated to  an algebraic flopping contraction
-                            \(X\to X_{\con}\) where \(X\) is quasi-projective with only mild
+                            \(X\to X_{\text{con}}\) where \(X\) is quasi-projective with only mild
                             singularities. These functors are  constructed naturally  using
                             bimodule cones, and  are locally two-sided tilting complexes by using
                             the local-global properties.
