--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         </div>
 
                         <div class="speaker">
-                            Caroline Namaya, Makerere University and University of Glasgow
+                            Caroline Namanya, Makerere University and University of Glasgow
                         </div>
 
                         <div class="abstract">
