Added notes and talk from 12 March

--- a/index.html
+++ b/index.html
@@ -84,7 +84,46 @@
             <div class="content">
                 <h2>Next Talk</h2> 
 
+                <div class="details-box">
+                    <div class="cal">
+                        <div class="month">March</div>
+                        <div class="date">19</div>
+                        <div class="time">3pm - 4pm</div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            <h3>
+                                Bayer-Macrì nef divisor on Bridgeland moduli spaces: Q&A
+                            </h3>
+                        </div>
+
+                        <div class="speaker">
+                            Uttaran Dutta, University of South Carolina
+                        </div>
+
+                        <div class="abstract">
+                            Last week I talked about Bayer-Macrì nef divisor, which is a general way of showing projectivity of a 
+                            Bridgeland Moduli space. But since there is no GIT construction available for Bridgeland Moduli spaces, 
+                            existence of universal family is not at all easy to prove. There are other techniques such as 
+                            using F-M transform and the "Gieseker wall", using exceptional collections and their "quiver region", 
+                            etc. I can discuss these things if people are interested.
+                        </div>
+
+                        <div class="notes">
+                            <a href="https://drive.google.com/file/d/1NmpQIGl1O4qKEFZKdxqQltOXUd2dVtUl/view?usp=drivesdk">Notes from the talk</a>
+                        </div>
+                    </div>
+                </div>
                 
+            </div>
+        </div>
+
+        <div id="img-separator-2"></div>
+
+        <div id="schedule">
+            <div class="content">
+                <h2>Past Talks</h2>
+
                 <div class="details-box">
                     <div class="cal">
                         <div class="month">March</div>
@@ -117,16 +156,12 @@
                             overview of both the theories and how they are related. In the end, if time permits, 
                             I shall add a few comments on the ampleness of the Bayer-Macrì divisor on K3 surfaces.
                         </div>
+
+                        <div class="notes">
+                            <a href="https://drive.google.com/file/d/1NmpQIGl1O4qKEFZKdxqQltOXUd2dVtUl/view?usp=drivesdk">Notes</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
-
-        <div id="img-separator-2"></div>
-
-        <div id="schedule">
-            <div class="content">
-                <h2>Past Talks</h2>
 
                 <div class="details-box">
                     <div class="cal">
