--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
                         If you'd like to unsubscribe, please email
                         <b>derivedobsessed-leave@ucl.ac.uk</b>. Note both the Subject: header and body of such a message are ignored.</b>
                     </div>
+
+                    <h2>
+                        DOGS is on Easter break. See you all next term!
+                    </h2>
                 </div>
                 
                 <div id="right-images">
@@ -80,9 +84,19 @@
 
         <div id="img-separator-1"></div>
 
+        <!--
         <div id="next-talk">
             <div class="content">
                 <h2>Next Talk</h2> 
+
+            </div>
+        </div>
+
+        <div id="img-separator-2"></div>-->
+
+        <div id="schedule">
+            <div class="content">
+                <h2>Past Talks</h2>
 
                 <div class="details-box">
                     <div class="cal">
@@ -114,15 +128,6 @@
                         </div>
                     </div>
                 </div>
-                
-            </div>
-        </div>
-
-        <div id="img-separator-2"></div>
-
-        <div id="schedule">
-            <div class="content">
-                <h2>Past Talks</h2>
 
                 <div class="details-box">
                     <div class="cal">
