Talk details 30th April

--- a/index.html
+++ b/index.html
@@ -70,9 +70,10 @@
                         <b>derivedobsessed-leave@ucl.ac.uk</b>. Note both the Subject: header and body of such a message are ignored.</b>
                     </div>
 
+                    <!-- Break banner
                     <h2>
                         DOGS is on Easter break. See you all next term!
-                    </h2>
+                    </h2>-->
                 </div>
                 
                 <div id="right-images">
@@ -84,15 +85,48 @@
 
         <div id="img-separator-1"></div>
 
-        <!--
+        <!-- comment this when on break -->
         <div id="next-talk">
             <div class="content">
                 <h2>Next Talk</h2> 
 
+                <div class="details-box">
+                    <div class="cal">
+                        <div class="month">May</div>
+                        <div class="date">30</div>
+                        <div class="time">3pm - 4pm</div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            <h3>
+                                Preprojective algebras via Serre functors and HRS-tilting
+                            </h3>
+                        </div>
+
+                        <div class="speaker">
+                            Jon Cheah, University of Hong Kong
+                        </div>
+
+                        <div class="abstract">
+                            The preprojective algebra of a quiver is the quotient of the path algebra of the 
+                            doubled quiver by certain commutator relations. This brief description hides many 
+                            questions as to why such a construction is natural/useful: Why these particular 
+                            commutators? What does preprojective mean? I will give a gentle introduction to 
+                            preprojective algebra and use examples to demonstrate the classical definitions. 
+                            Using results which relate the Coxeter functors and AR-translate to Serre functors 
+                            on the derived category, I will show how the defining relations arise naturally from 
+                            an explicit computation of the Serre functor. This derived construction gives a 
+                            dg-algebra whose zeroth cohomology gives the classical preprojective algebra. If time 
+                            permits, I will discuss the Serre functor as a composition of derived reflection functors 
+                            from the point of view of HRS-tilting.
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <div id="img-separator-2"></div>-->
+        <div id="img-separator-2"></div>
+        <!-- -->
 
         <div id="schedule">
             <div class="content">
