Fixed typos 30th April

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
                 <div class="details-box">
                     <div class="cal">
-                        <div class="month">May</div>
+                        <div class="month">April</div>
                         <div class="date">30</div>
                         <div class="time">3pm - 4pm</div>
                     </div>
@@ -112,7 +112,7 @@
                             doubled quiver by certain commutator relations. This brief description hides many 
                             questions as to why such a construction is natural/useful: Why these particular 
                             commutators? What does preprojective mean? I will give a gentle introduction to 
-                            preprojective algebra and use examples to demonstrate the classical definitions. 
+                            preprojective algebras and use examples to demonstrate the classical definitions. 
                             Using results which relate the Coxeter functors and AR-translate to Serre functors 
                             on the derived category, I will show how the defining relations arise naturally from 
                             an explicit computation of the Serre functor. This derived construction gives a 
