--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@
                             permits, I will discuss the Serre functor as a composition of derived reflection functors 
                             from the point of view of HRS-tilting.
                         </div>
+
+
+                        <div class="notes">
+                            <a href="notes/dogs-30_04_24.pdf">Notes</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -155,10 +160,6 @@
                             existence of universal family is not at all easy to prove. There are other techniques such as 
                             using F-M transform and the "Gieseker wall", using exceptional collections and their "quiver region", 
                             etc. I can discuss these things if people are interested.
-                        </div>
-
-                        <div class="notes">
-                            <a href="https://drive.google.com/file/d/1NmpQIGl1O4qKEFZKdxqQltOXUd2dVtUl/view?usp=drivesdk">Notes from the talk</a>
                         </div>
                     </div>
                 </div>
