--- a/index.html
+++ b/index.html
@@ -92,6 +92,48 @@
 
                 <div class="details-box">
                     <div class="cal">
+                        <div class="month">May</div>
+                        <div class="date">14</div>
+                        <div class="time">3pm - 4pm</div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            <h3>
+                                Categorical Torelli theorems for Fano threefolds
+                            </h3>
+                        </div>
+
+                        <div class="speaker">
+                            Augustinas Jacovskis, University of Luxembourg
+                        </div>
+
+                        <div class="abstract">
+                            Let X be a smooth Fano threefold. Due to a theorem of Bondal-Orlov from the 90s, X is determined 
+                            up to isomorphism by its derived category D^b(X). Since X is Fano, D^b(X) admits a semiorthogonal 
+                            decomposition into a number of exceptional objects, and the orthogonal complement to them. It is 
+                            a natural question to ask whether X is determined up to isomorphism by less data than the whole of 
+                            D^b(X). A natural candidate for "less data" is the aforementioned orthogonal complement to the 
+                            exceptional objects. This subcategory of D^b(X) is known as the Kuznetsov component Ku(X), and when 
+                            Ku(X) determines X up to isomorphism a categorical Torelli theorem is said to hold. 
+                            <br><br>
+                            In my talk I will overview two methods (Bridgeland moduli-theoretic and K-theoretic) of proving 
+                            categorical Torelli theorems for certain classes of prime Fano threefolds. I will in particular 
+                            discuss joint work with Xun Lin, Zhiyu Liu, and Shizhuo Zhang; and Hannah Dell and Franco Rota.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="img-separator-2"></div>
+        <!-- -->
+
+        <div id="schedule">
+            <div class="content">
+                <h2>Past Talks</h2>
+
+                <div class="details-box">
+                    <div class="cal">
                         <div class="month">April</div>
                         <div class="date">30</div>
                         <div class="time">3pm - 4pm</div>
@@ -127,15 +169,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-
-        <div id="img-separator-2"></div>
-        <!-- -->
-
-        <div id="schedule">
-            <div class="content">
-                <h2>Past Talks</h2>
 
                 <div class="details-box">
                     <div class="cal">
