--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
                         </div>
 
                         <div class="abstract">
-                            Let X be a smooth Fano threefold. Due to a theorem of Bondal-Orlov from the 90s, X is determined 
-                            up to isomorphism by its derived category D^b(X). Since X is Fano, D^b(X) admits a semiorthogonal 
+                            Let \(X\) be a smooth Fano threefold. Due to a theorem of Bondal-Orlov from the 90s, \(X\) is determined 
+                            up to isomorphism by its derived category \(D^b(X)\). Since \(X\) is Fano, \(D^b(X)\) admits a semiorthogonal 
                             decomposition into a number of exceptional objects, and the orthogonal complement to them. It is 
-                            a natural question to ask whether X is determined up to isomorphism by less data than the whole of 
-                            D^b(X). A natural candidate for "less data" is the aforementioned orthogonal complement to the 
-                            exceptional objects. This subcategory of D^b(X) is known as the Kuznetsov component Ku(X), and when 
-                            Ku(X) determines X up to isomorphism a categorical Torelli theorem is said to hold. 
+                            a natural question to ask whether \(X\) is determined up to isomorphism by less data than the whole of 
+                            \(D^b(X)\). A natural candidate for "less data" is the aforementioned orthogonal complement to the 
+                            exceptional objects. This subcategory of \(D^b(X)\) is known as the Kuznetsov component \(Ku(X)\), and when 
+                            \(Ku(X)\) determines \(X\) up to isomorphism a categorical Torelli theorem is said to hold. 
                             <br><br>
                             In my talk I will overview two methods (Bridgeland moduli-theoretic and K-theoretic) of proving 
                             categorical Torelli theorems for certain classes of prime Fano threefolds. I will in particular 
