--- a/index.html
+++ b/index.html
@@ -93,6 +93,38 @@
                 <div class="details-box">
                     <div class="cal">
                         <div class="month">May</div>
+                        <div class="date">28</div>
+                        <div class="time">3pm - 4pm</div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            <h3>
+                                TBA
+                            </h3>
+                        </div>
+
+                        <div class="speaker">
+                            
+                        </div>
+
+                        <div class="abstract">
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="img-separator-2"></div>
+        <!-- -->
+
+        <div id="schedule">
+            <div class="content">
+                <h2>Past Talks</h2>
+
+                <div class="details-box">
+                    <div class="cal">
+                        <div class="month">May</div>
                         <div class="date">14</div>
                         <div class="time">3pm - 4pm</div>
                     </div>
@@ -120,17 +152,12 @@
                             categorical Torelli theorems for certain classes of prime Fano threefolds. I will in particular 
                             discuss joint work with Xun Lin, Zhiyu Liu, and Shizhuo Zhang; and Hannah Dell and Franco Rota.
                         </div>
+
+                        <div class="notes">
+                            <a href="notes/dogs-14_05_24.pdf">Notes</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
-
-        <div id="img-separator-2"></div>
-        <!-- -->
-
-        <div id="schedule">
-            <div class="content">
-                <h2>Past Talks</h2>
 
                 <div class="details-box">
                     <div class="cal">
