Fixed link for notes

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         </div>
 
                         <div class="notes">
-                            <a href="notes/dogs-14_05_24.pdf">Notes</a>
+                            <a href="notes/dogs-14-05-24.pdf">Notes</a>
                         </div>
                     </div>
                 </div>
