--- a/index.html
+++ b/index.html
@@ -99,16 +99,24 @@
                     <div class="details">
                         <div class="title">
                             <h3>
-                                TBA
+                                Some things I know about derived intersections
                             </h3>
                         </div>
 
                         <div class="speaker">
-                            
+                            Oscar Finegan, Cardiff University
                         </div>
 
                         <div class="abstract">
-                            
+                            Intersection theory (in the sense of Fulton) sets up intersections of 
+                            objects considered only up to rational equivalence. This leads to nice 
+                            numerics in intersections according to a principle of continuity. 
+                            However, it’s somewhat weird and unintuitive. A self-intersection of a 
+                            line in the plane is clearly distinguished from the transverse intersection 
+                            of two lines. Derived Algebraic Geometry produces a more rigid framework in 
+                            which these degenerate cases are interesting to study. I'll talk about this 
+                            a little bit, then actually talk about the homological methods I've used over 
+                            the course of my doctorate (maybe even including a proof of a result 😲). 
                         </div>
                     </div>
                 </div>
