Added talk 28th May

--- a/index.html
+++ b/index.html
@@ -118,6 +118,14 @@
                             a little bit, then actually talk about the homological methods I've used over 
                             the course of my doctorate (maybe even including a proof of a result 😲). 
                         </div>
+
+                        <div class="notes">
+                            <a href="notes/dogs-28_05_24.pdf">Notes</a>
+                        </div>
+
+                        <div class="notes">
+                            <a href="https://ucl.zoom.us/rec/share/meg0kdAGABNKFX_zJ4JkYMSA1mdDW4aDKgIPU6jJthBThoEYdARguaAWorA-1tud.f0mbvlDMyloLWQK- ">Recording</a>
+                        </div>
                     </div>
                 </div>
             </div>
