Box for next talk, June 11

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
 
                         If you'd like to unsubscribe, please email
                         <b>derivedobsessed-leave@ucl.ac.uk</b>. Note both the Subject: header and body of such a message are ignored.</b>
+
+                        <br><br>
+                        Some talks may be recorded. If you would like the password for these recordings, please email one of the organisers.
                     </div>
 
                     <!-- Break banner
@@ -89,6 +92,38 @@
         <div id="next-talk">
             <div class="content">
                 <h2>Next Talk</h2> 
+
+                <div class="details-box">
+                    <div class="cal">
+                        <div class="month">June</div>
+                        <div class="date">11</div>
+                        <div class="time">3pm - 4pm</div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            <h3>
+                                TBA
+                            </h3>
+                        </div>
+
+                        <div class="speaker">
+                            
+                        </div>
+
+                        <div class="abstract">
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="img-separator-2"></div>
+        <!-- -->
+
+        <div id="schedule">
+            <div class="content">
+                <h2>Past Talks</h2>
 
                 <div class="details-box">
                     <div class="cal">
@@ -128,15 +163,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-
-        <div id="img-separator-2"></div>
-        <!-- -->
-
-        <div id="schedule">
-            <div class="content">
-                <h2>Past Talks</h2>
 
                 <div class="details-box">
                     <div class="cal">
