--- a/index.html
+++ b/index.html
@@ -102,16 +102,24 @@
                     <div class="details">
                         <div class="title">
                             <h3>
-                                TBA
+                                DAnG it! An Introduction to Derived Analytic Geometry
                             </h3>
                         </div>
 
                         <div class="speaker">
-                            
+                            Rhiannon Savage, University of Oxford
                         </div>
 
                         <div class="abstract">
-                            
+                            Derived algebraic geometry (DAG) can be viewed as homotopical algebraic geometry relative, in the sense of 
+                            Toën and Vezzosi, to the category of simplicial commutative rings. In this talk we will explore a new model 
+                            for derived analytic geometry (DAnG), proposed by Ben-Bassat, Kelly, and Kremnizer, as homotopical 
+                            algebraic geometry relative to the category of simplicial commutative complete bornological rings. I will 
+                            also briefly mention some work I have done looking at representability of derived analytic stacks in this 
+                            framework. 
+
+                            This will mainly be an ideas/vibes talk and no knowledge of analytic geometry or infinity categories will 
+                            be assumed!
                         </div>
                     </div>
                 </div>
