--- a/index.html
+++ b/index.html
@@ -96,6 +96,38 @@
                 <div class="details-box">
                     <div class="cal">
                         <div class="month">June</div>
+                        <div class="date">25</div>
+                        <div class="time">3pm - 4pm</div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            <h3>
+                                TBA
+                            </h3>
+                        </div>
+
+                        <div class="speaker">
+                            Abhishek Khannur, LSGNT
+                        </div>
+
+                        <div class="abstract">
+                            TBA
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="img-separator-2"></div>
+        <!-- -->
+
+        <div id="schedule">
+            <div class="content">
+                <h2>Past Talks</h2>
+
+                <div class="details-box">
+                    <div class="cal">
+                        <div class="month">June</div>
                         <div class="date">11</div>
                         <div class="time">3pm - 4pm</div>
                     </div>
@@ -123,15 +155,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-
-        <div id="img-separator-2"></div>
-        <!-- -->
-
-        <div id="schedule">
-            <div class="content">
-                <h2>Past Talks</h2>
 
                 <div class="details-box">
                     <div class="cal">
@@ -154,7 +177,7 @@
                             Intersection theory (in the sense of Fulton) sets up intersections of 
                             objects considered only up to rational equivalence. This leads to nice 
                             numerics in intersections according to a principle of continuity. 
-                            However, it’s somewhat weird and unintuitive. A self-intersection of a 
+                            However, it's somewhat weird and unintuitive. A self-intersection of a 
                             line in the plane is clearly distinguished from the transverse intersection 
                             of two lines. Derived Algebraic Geometry produces a more rigid framework in 
                             which these degenerate cases are interesting to study. I'll talk about this 
