Abstract 27th June

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <div class="details">
                         <div class="title">
                             <h3>
-                                TBA
+                                Flops of moduli of sheaves
                             </h3>
                         </div>
 
@@ -111,7 +111,17 @@
                         </div>
 
                         <div class="abstract">
-                            TBA
+                            <strong>Please note that this talk will take place on Thursday 27th.</strong>
+                            <br><br>
+                            A stability condition is necessary for constructing well behaved moduli 
+                            spaces of (complexes of) sheaves  on a projective variety. I'll give a 
+                            brief introduction to stability conditions and mention how varying this s
+                            tability condition changes the moduli space as we cross a wall. In particular, 
+                            I will describe, hopefully with a concrete example, a local model for flops 
+                            of moduli of Bridgeland semistable (complexes of) sheaves on a K3 surface in 
+                            terms of GIT or King stability for quiver varieties. If time permits, I'll 
+                            say a thing or two about wall crossing formulas for the derived category of 
+                            coherent sheaves of the moduli spaces.
                         </div>
                     </div>
                 </div>
