--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
                             <br><br>
                             A stability condition is necessary for constructing well behaved moduli 
                             spaces of (complexes of) sheaves  on a projective variety. I'll give a 
-                            brief introduction to stability conditions and mention how varying this s
-                            tability condition changes the moduli space as we cross a wall. In particular, 
+                            brief introduction to stability conditions and mention how varying this 
+                            stability condition changes the moduli space as we cross a wall. In particular, 
                             I will describe, hopefully with a concrete example, a local model for flops 
                             of moduli of Bridgeland semistable (complexes of) sheaves on a K3 surface in 
                             terms of GIT or King stability for quiver varieties. If time permits, I'll 
