--- a/index.html
+++ b/index.html
@@ -73,10 +73,12 @@
                         Some talks may be recorded. If you would like the password for these recordings, please email one of the organisers.
                     </div>
 
-                    <!-- Break banner
-                    <h2>
-                        DOGS is on Easter break. See you all next term!
-                    </h2>-->
+                    <!-- Break banner -->
+                    <h2 id="break-banner">
+                        DOGS is on summer break. Thanks to all those who gave a talk and attended this year. 
+                        <br>
+                        See you all in autumn!
+                    </h2>
                 </div>
                 
                 <div id="right-images">
@@ -88,7 +90,7 @@
 
         <div id="img-separator-1"></div>
 
-        <!-- comment this when on break -->
+        <!-- comment this when on break
         <div id="next-talk">
             <div class="content">
                 <h2>Next Talk</h2> 
@@ -129,11 +131,42 @@
         </div>
 
         <div id="img-separator-2"></div>
-        <!-- -->
+        -->
 
         <div id="schedule">
             <div class="content">
                 <h2>Past Talks</h2>
+
+                <div class="details-box">
+                    <div class="cal">
+                        <div class="month">June</div>
+                        <div class="date">27</div>
+                        <div class="time">3pm - 4pm</div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            <h3>
+                                Flops of moduli of sheaves
+                            </h3>
+                        </div>
+
+                        <div class="speaker">
+                            Abhishek Khannur, LSGNT
+                        </div>
+
+                        <div class="abstract">
+                            A stability condition is necessary for constructing well behaved moduli 
+                            spaces of (complexes of) sheaves  on a projective variety. I'll give a 
+                            brief introduction to stability conditions and mention how varying this 
+                            stability condition changes the moduli space as we cross a wall. In particular, 
+                            I will describe, hopefully with a concrete example, a local model for flops 
+                            of moduli of Bridgeland semistable (complexes of) sheaves on a K3 surface in 
+                            terms of GIT or King stability for quiver varieties. If time permits, I'll 
+                            say a thing or two about wall crossing formulas for the derived category of 
+                            coherent sheaves of the moduli spaces.
+                        </div>
+                    </div>
+                </div>
 
                 <div class="details-box">
                     <div class="cal">
