Next talk oct 1st

--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
                         Some talks may be recorded. If you would like the password for these recordings, please email one of the organisers.
                     </div>
 
-                    <!-- Break banner -->
+                    <!-- Break banner 
                     <h2 id="break-banner">
                         DOGS is on summer break. Thanks to all those who gave a talk and attended this year. 
                         <br>
                         See you all in autumn!
-                    </h2>
+                    </h2>-->
                 </div>
                 
                 <div id="right-images">
@@ -90,40 +90,38 @@
 
         <div id="img-separator-1"></div>
 
-        <!-- comment this when on break
+        <!-- comment this when on break -->
         <div id="next-talk">
             <div class="content">
                 <h2>Next Talk</h2> 
 
                 <div class="details-box">
                     <div class="cal">
-                        <div class="month">June</div>
-                        <div class="date">27</div>
+                        <div class="month">October</div>
+                        <div class="date">1</div>
                         <div class="time">3pm - 4pm</div>
                     </div>
                     <div class="details">
                         <div class="title">
                             <h3>
-                                Flops of moduli of sheaves
+                                Derived Categories of Cubic Fourfolds
                             </h3>
                         </div>
 
                         <div class="speaker">
-                            Abhishek Khannur, LSGNT
+                            Bogdan Simeonov, LSGNT
                         </div>
 
                         <div class="abstract">
-                            <strong>Please note that this talk will take place on Thursday 27th.</strong>
-                            <br><br>
-                            A stability condition is necessary for constructing well behaved moduli 
-                            spaces of (complexes of) sheaves  on a projective variety. I'll give a 
-                            brief introduction to stability conditions and mention how varying this 
-                            stability condition changes the moduli space as we cross a wall. In particular, 
-                            I will describe, hopefully with a concrete example, a local model for flops 
-                            of moduli of Bridgeland semistable (complexes of) sheaves on a K3 surface in 
-                            terms of GIT or King stability for quiver varieties. If time permits, I'll 
-                            say a thing or two about wall crossing formulas for the derived category of 
-                            coherent sheaves of the moduli spaces.
+                            The rationality problem of the cubic fourfold is a classical problem 
+                            which remains unsolved (though there is recent work of Kontsevich 
+                            that promises a solution). I will describe two approaches to this 
+                            problem: one Hodge-theoretic (due to Hassett), and one using derived 
+                            categories (due to Kuznetsov). Along the way, I will introduce 
+                            Kuznetsov components, their properties and how they are related 
+                            to K3 surfaces. If time permits, I will give an overview of a paper 
+                            by Thomas and Addington, which shows that the two approaches are 
+                            actually equivalent.
                         </div>
                     </div>
                 </div>
@@ -131,11 +129,11 @@
         </div>
 
         <div id="img-separator-2"></div>
-        -->
+        <!-- Break comment end -->
 
         <div id="schedule">
             <div class="content">
-                <h2>Past Talks</h2>
+                <h2>Past Talks (2023 - 2024)</h2>
 
                 <div class="details-box">
                     <div class="cal">
