Updated abstract 1st Oct

--- a/index.html
+++ b/index.html
@@ -114,14 +114,13 @@
 
                         <div class="abstract">
                             The rationality problem of the cubic fourfold is a classical problem 
-                            which remains unsolved (though there is recent work of Kontsevich 
-                            that promises a solution). I will describe two approaches to this 
-                            problem: one Hodge-theoretic (due to Hassett), and one using derived 
-                            categories (due to Kuznetsov). Along the way, I will introduce 
-                            Kuznetsov components, their properties and how they are related 
-                            to K3 surfaces. If time permits, I will give an overview of a paper 
-                            by Thomas and Addington, which shows that the two approaches are 
-                            actually equivalent.
+                            which remains unsolved (though there is recent work of Katzarkov-Kontsevich-Pantev-Yu 
+                            that promises a solution). I will describe two approaches to this problem: 
+                            one Hodge-theoretic (due to Hassett), and one using derived categories 
+                            (due to Kuznetsov). Along the way, I will introduce Kuznetsov components, 
+                            their properties and how they are related to K3 surfaces. If time permits, 
+                            I will give an overview of a paper by Thomas and Addington, which shows that 
+                            the two approaches are actually equivalent.
                         </div>
                     </div>
                 </div>
