Added notes 1st Oct

--- a/index.html
+++ b/index.html
@@ -122,6 +122,11 @@
                             I will give an overview of a paper by Thomas and Addington, which shows that 
                             the two approaches are actually equivalent.
                         </div>
+
+
+                        <div class="notes">
+                            <a href="notes/dogs-01_10_24.pdf">Notes</a>
+                        </div>
                     </div>
                 </div>
             </div>
