Changed notes to url

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 
                         <div class="notes">
-                            <a href="notes/dogs-01_10_24.pdf">Notes</a>
+                            <a href="https://bogdan-simeonov.github.io/assets/pdf/DOGStalk.pdf">Notes</a>
                         </div>
                     </div>
                 </div>
