--- a/index.html
+++ b/index.html
@@ -98,6 +98,54 @@
                 <div class="details-box">
                     <div class="cal">
                         <div class="month">October</div>
+                        <div class="date">15</div>
+                        <div class="time">3pm - 4pm</div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            <h3>
+                                Tilting sheaves and the Baer-Bondal theorem
+                            </h3>
+                        </div>
+
+                        <div class="speaker">
+                            Daniel Bernal, The State University of Campinas
+                        </div>
+
+                        <div class="abstract">
+                            The study of derived categories of coherent sheaves has 
+                            been studied strongly in the last few years. However, 
+                            sometimes it is difficult to obtain good descriptions on 
+                            it. One method to studying is via representations of quivers, 
+                            as they behave nicely and its derived category is rather tame. 
+                            In this talk we are going to mention some past results which 
+                            indicate where the derived category of sheaves coincides with 
+                            the derived category of representations of quivers; which 
+                            essentially happens when we have a tilting sheaf, or a strong 
+                            exceptional collection. We expect to prove it and to give a 
+                            small breath of what is happening behind such equivalence. 
+                        </div>
+
+                        <!--
+                        <div class="notes">
+                            <a href="">Notes</a>
+                        </div>
+                        -->
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="img-separator-2"></div>
+        <!-- Break comment end -->
+
+        <div id="schedule">
+            <div class="content">
+                <h2>Past Talks</h2>
+
+                <div class="details-box">
+                    <div class="cal">
+                        <div class="month">October</div>
                         <div class="date">1</div>
                         <div class="time">3pm - 4pm</div>
                     </div>
@@ -129,14 +177,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
 
-        <div id="img-separator-2"></div>
-        <!-- Break comment end -->
-
-        <div id="schedule">
-            <div class="content">
                 <h2>Past Talks (2023 - 2024)</h2>
 
                 <div class="details-box">
