Talk details 29th Oct

--- a/index.html
+++ b/index.html
@@ -98,6 +98,52 @@
                 <div class="details-box">
                     <div class="cal">
                         <div class="month">October</div>
+                        <div class="date">29</div>
+                        <div class="time">3pm - 4pm</div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            <h3>
+                                Normal bundles and fully faithful Fourier-Mukai transforms
+                            </h3>
+                        </div>
+
+                        <div class="speaker">
+                            Erik Nikolov, Gottfried Wilhelm Leibniz Universität Hannover
+                        </div>
+
+                        <div class="abstract">
+                            Working with triangulated categories in general, it is important to 
+                            determine whether a given exact functor is fully faithful or not. In 
+                            algebraic geometry, one often encounters exact functors of Fourier-Mukai 
+                            type relating derived categories of smooth projective varieties. In my 
+                            talk, I will focus on a typical geometric situation and present a 
+                            criterion allowing to verify fully faithfulness of certain Fourier-Mukai 
+                            transforms (built from projections and closed embeddings). The goal is 
+                            to explain the role of normal bundles in such computations and to provide 
+                            as many examples as possible.
+                        </div>
+
+                        <!--
+                        <div class="notes">
+                            <a href="">Notes</a>
+                        </div>
+                        -->
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="img-separator-2"></div>
+        <!-- Break comment end -->
+
+        <div id="schedule">
+            <div class="content">
+                <h2>Past Talks</h2>
+
+                <div class="details-box">
+                    <div class="cal">
+                        <div class="month">October</div>
                         <div class="date">15</div>
                         <div class="time">3pm - 4pm</div>
                     </div>
@@ -133,15 +179,6 @@
                         -->
                     </div>
                 </div>
-            </div>
-        </div>
-
-        <div id="img-separator-2"></div>
-        <!-- Break comment end -->
-
-        <div id="schedule">
-            <div class="content">
-                <h2>Past Talks</h2>
 
                 <div class="details-box">
                     <div class="cal">
