Notes for 15th Oct

--- a/index.html
+++ b/index.html
@@ -172,11 +172,9 @@
                             small breath of what is happening behind such equivalence. 
                         </div>
 
-                        <!--
                         <div class="notes">
-                            <a href="">Notes</a>
-                        </div>
-                        -->
+                            <a href="notes/dogs-15_10_24.pdf">Notes</a>
+                        </div>                        
                     </div>
                 </div>
 
