Fixed notes link 11th Nov

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
                         
                         <div class="notes">
-                            <a href="notes/dogs-12_11_24">Notes</a>
+                            <a href="notes/dogs-12_11_24.pdf">Notes</a>
                         </div>
                         
                     </div>
